# cmake_boilerplate

./: .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Dockerfile  README.md  Structure.md  build_all.ps1  build_all.sh  devenv_and_run.sh  docker-compose.yaml  docker_devenv.sh  format_cmake.ps1  format_cmake.sh  format_parallel.sh  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: AddTestDir.cmake  BuildConfiguration.cmake  CPackConfig.cmake  CodeCoverage.cmake  CodeFormatAndAnalysis.cmake  CompilerSettings.cmake  LinkerSettings.cmake  PlatformSettings.cmake  ShaderCompilation.cmake  ThirdParty.cmake
docs/: CMakeLists.txt  Doxyfile.in  generate docs.py
include/: include.hpp
lib/: CMakeLists.txt
lib/cmake/: LibraryCompilerSettings.cmake  LibraryExportSettings.cmake  LibraryInstallSettings.cmake  LibraryLinkageSettings.cmake
lib/include/: include.hpp
lib/library1/: CMakeLists.txt
lib/library1/cmake/: LibraryCP.cmake  LibraryCompilerSettings.cmake  LibraryExportSettings.cmake  LibraryInstallSettings.cmake  LibraryLinkageSettings.cmake  LibraryPlatformSettings.cmake  libConfig.cmake.in
lib/library1/include/: include.hpp
lib/library1/lib1_test/: CMakeLists.txt  lib_test.cpp
lib/library1/src/: CMakeLists.txt  lib.cpp
lib/library1/test/: CMakeLists.txt  lib_test.cpp
lib/library2/: CMakeLists.txt
lib/library2/cmake/: LibraryCP.cmake  LibraryCompilerSettings.cmake  LibraryExportSettings.cmake  LibraryInstallSettings.cmake  LibraryLinkageSettings.cmake  LibraryPlatformSettings.cmake  libConfig.cmake.in
lib/library2/include/: include.hpp
lib/library2/lib2_test/: CMakeLists.txt  lib_test.cpp
lib/library2/src/: CMakeLists.txt  lib.cpp
lib/library2/test/: CMakeLists.txt
lib/src/: CMakeLists.txt  lib.cpp
lib/test/: CMakeLists.txt
lib/tests/lib1_test/: CMakeLists.txt  lib_test.cpp
lib/tests/lib2_test/: CMakeLists.txt  lib_test.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_main.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/fuzz_test/: CMakeLists.txt  fuzz_target.cpp
